--- a/index.html
+++ b/index.html
@@ -24,46 +24,12 @@
                      <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
                         <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="grants.html">Grants</a></li>
                         <li><a href="news.html">News</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
-               </div>
-            </div>
-         </div>
-         <div class="row-fluid">
-            <div class="span12">
-               <div id="main-carousel" class="carousel slide">
-                  <div class="carousel-inner">
-                     <div class="item active">
-                        <img src="images/ani-kolleshi-crop3.JPG" class="carousel-image" alt="">                      
-                        <div class="carousel-caption">
-                           <h4>Welcome to the Velit Aliquet Sagittis University Research Laboratory</h4>
-                           <!-- -->
-                           <p></p>
-                        </div>
-                     </div>
-                     <div class="item">
-                        <img src="images/microscope-crop1.JPG" class="carousel-image" alt="">
-                        <div class="carousel-caption">
-                           <h4>Lab Photos</h4>
-                           <p></p>
-                        </div>
-                     </div>
-                     <div class="item">
-                        <img src="images/building-crop1.JPG" class="carousel-image" alt="">
-                        <div class="carousel-caption">
-                           <h4>Main Building Photo</h4>
-                           <p></p>
-                        </div>
-                     </div>
-                  </div>
-                  <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
-                  <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
                </div>
             </div>
          </div>
@@ -72,144 +38,25 @@
             <div class="row-fluid marketing">
                <div class="span12">
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus non tortor nec congue. 
-                     Donec dictum rhoncus urna eget gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                     Vivamus id rutrum enim, quis malesuada dui. Sed ullamcorper sapien sed nunc hendrerit, sed dapibus 
-                     ligula accumsan. 
+                     Welcome! Our lab broadly concentrates on how language is processed and represented in the human brain, and how it interacts with other cognitive domains such as music and memory.
                   </p>
-                  <br/>
-               </div>
-               <div class="row-fluid">
-                  <hr>
-                  <h2 class="centered">Recent News</h2>
-                  <hr>
-               </div>
-               <div class="span4 feature-item">
-                  <h5> <span class="date"> May 1, 2019 </span> </h5>
-                  <h4 class="feature-heading">
-                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
-                     Students pose for conference lacus luctus accumsan tortor posuere
-                     </a>
-                     <br/>
-                  </h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
-                     <img src="thumbs/jerry-zhang-1281608-unsplash.jpg" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                     dolore magna aliqua. 
-                     Find the proceedings <a href="https://unsplash.com/photos/CPmrdbbpnXg">here</a>.
-                  </p>
-                  <br/>
-                  <br/>
-               </div>
-               <div class="span4 feature-item">
-                  <h5> <span class="date">April 20, 2019</span> </h5>
-                  <h4 class="feature-heading">
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
-                     Tincidunt tortor aliquam nulla facilisi. Nunc scelerisque viverra mauris in
-                     </a>
-                  </h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
-                     <img src="thumbs/nasa-89125-unsplash.jpg" alt="">
-                     </a>
-                  </div>
-                  <hr>
-                  <p>
-                     Read the paper 
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">here</a>.
-                     Consequat semper viverra nam libero justo laoreet. Commodo odio aenean sed adipiscing diam donec. 
-                  </p>
-                  <br/>
-               </div>
-               <div class="row-fluid">
-                  <div class="span4 feature-item">
-                     <h5> <span class="date">October 2, 2018</span> </h5>
-                     <h4 class="feature-heading">
-                        <a href="http://mechanical.illinois.edu/news/miljkovic-pleased-join-%E2%80%98powerhouse%E2%80%99-illinois">
-                        Pretium lectus quam id leo in vitae turpis massa
-                        <br/>
-                        <br/>
-                        </a>
-                     </h4>
-                     <hr>
-                     <div class="centered">
-                        <a href="https://unsplash.com/photos/WNk-f-TnZDw">
-                        <img src="thumbs/rodolfo-cuadros-762364-unsplash.jpg" alt=""></a>
-                     </div>
-                     <hr>
-                     <p> 
-                        Tristique senectus et netus et malesuada. Sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. 
-                        Read it <a href="https://unsplash.com/photos/WNk-f-TnZDw">here</a>.
-                     </p>
-                     <br/>					
-                  </div>
-               </div>
-               <hr>
-            </div>
-            <div class="row-fluid">
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/QvbLjB9pHLM">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet ultrices velit habitasse platea</a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/QvbLjB9pHLM"><img src="thumbs/ivanov-crop.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>Aecenas consectetur vestibulum orci ut vulputate. Aenean cursus finibus pulvinar <a href="https://unsplash.com/photos/QvbLjB9pHLM">here</a>. </p>
-                  <br/>
-               </div>
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/lQGJCMY5qcM">Maecenas placerat ullamcorper eros a vehicula. Duis mollis tortor ut elit elementum</a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/lQGJCMY5qcM"><img src="thumbs/beaker-crop.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>Read the paper <a href="https://unsplash.com/photos/lQGJCMY5qcM">here</a> </p>
-               </div>
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/QCbZ4ASLhM8">Fusce tempor placerat felis, et placerat sapien lacinia sit amet<br/><br/><br/></a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/QCbZ4ASLhM8"><img src="thumbs/sato-chart.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p> Aenean posuere, nulla ut placerat fringilla, dolor dolor pellentesque metus. Read the paper <a href="https://unsplash.com/photos/QCbZ4ASLhM8">here</a>.</p>
-                  <br/>
-                  <br/>
-                  <br/>
-               </div>
-            </div>
-         </div>
+                     <ol>
+                        <li><b>Language, music and brain.</b> We investigate this theme from the perspective of how congenital amusia (commonly known as tone deafness), an innate musical pitch disorder, affects speech processing from behavioral to neural levels.</li> 
+                        <li><b>Memory consolidation of language.</b>How sleep contributes to the consolidation of speech sound categories in the brain of L2 learners.</li>
+                        <li><b>Language in neurodevelopmental disorders.</b>What neurocognitive mechanisms underly learning and memory problems in children with developmental disorders of speech and language.</li>
+                     </ol>
+                     We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.
+
+                  <h4>JOINING THE LAB</h4>
+				        <ol>
+                  <li><b>We are looking for passionate new researchers to join the team. If you are interested, please contact caicai.zhang@polyu.edu.hk.</b></li>
+                  <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
+				        </ol>
+
+      
       </div>
       <footer id="footer">
          <div class="container-fluid">
-            <div class="row-fluid">
-               <div class="span5">
-                  <h3>Contact Information</h3>
-                  <p><b>Office Hours: </b>Monday-Friday (8.00am - 5.00pm)</p>
-                  <p><b>Phone: </b>999-999-9999</p>
-                  <p><b>Cell: </b>999-999-9999</p>
-                  <a href="mailto:your.email@uni.edu">Email</a>
-               </div>
-               <div class="span2">
-                  <a href="https://mybrandnewlogo.com/"><img src = "thumbs/generic-logo.JPG" alt="research-lab-logo"/></a>
-               </div>
-               <div class="span5">
-                  <h3>Address</h3>
-                  <p>9999 Generic Research Laboratory<br>
-                     999 Fake Street Avenue<br>
-                     City, State<br>
-                     Country ZIP
-                  </p>
-                  <a href="http://maps.google.com/">Show Map</a>
-               </div>
-            </div>
          </div>
       </footer>
 
