--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Generic Research Lab Template - Home</title>
+      <title>Caicai Zhang Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
+      <meta name="description" content="Caicai Zhang Lab">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> The Hong Kong Polytech University </p>
+            <h1>Caicai Zhang Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
@@ -38,16 +38,17 @@
             <div class="row-fluid marketing">
                <div class="span12">
                   <p>
-                     Welcome! Our lab broadly concentrates on how language is processed and represented in the human brain, and how it interacts with other cognitive domains such as music and memory.
+                     Welcome! Our lab broadly concentrates on how language is processed and represented in the human brain, and how it interacts with other cognitive domains such as music and memory. At a more specific level, our research focuses on:
                   </p>
                      <ol>
                         <li><b>Language, music and brain.</b> We investigate this theme from the perspective of how congenital amusia (commonly known as tone deafness), an innate musical pitch disorder, affects speech processing from behavioral to neural levels.</li> 
                         <li><b>Memory consolidation of language.</b>How sleep contributes to the consolidation of speech sound categories in the brain of L2 learners.</li>
                         <li><b>Language in neurodevelopmental disorders.</b>What neurocognitive mechanisms underly learning and memory problems in children with developmental disorders of speech and language.</li>
                      </ol>
-                     We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.
-
-                  <h4>JOINING THE LAB</h4>
+                     We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.<br>
+		     We are part of the <a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Research Centre for Language, Cognition, and Neuroscience (RCLCN)</a> at the <a href="https://www.polyu.edu.hk/cbs/" target="_blank">Department of Chinese and Bilingual Studies (CBS)</a>, PolyU.
+			<br><br>
+                  <h4>JOIN US!</h4>
 				        <ol>
                   <li><b>We are looking for passionate new researchers to join the team. If you are interested, please contact caicai.zhang@polyu.edu.hk.</b></li>
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
