--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> The Hong Kong Polytech University </p>
+            <p class="lead"> The Hong Kong Polytechnic University </p>
             <h1>Caicai Zhang Lab</h1>
          </header>
          <div class="masthead">
