--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
 				        </ol>
 
-      
+      </div>
+      </div>	    
       </div>
       <footer id="footer">
          <div class="container-fluid">
