--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                   </p>
                      <ol>
                         <li><b>Language, music and brain.</b> We investigate this theme from the perspective of how congenital amusia (commonly known as tone deafness), an innate musical pitch disorder, affects speech processing from behavioral to neural levels.</li> 
-                        <li><b>Memory consolidation of language.</b>How sleep contributes to the consolidation of speech sound categories in the brain of L2 learners.</li>
-                        <li><b>Language in neurodevelopmental disorders.</b>What neurocognitive mechanisms underly learning and memory problems in children with developmental disorders of speech and language.</li>
+                        <li><b>Memory consolidation of language.</b> How sleep contributes to the consolidation of speech sound categories in the brain of L2 learners.</li>
+                        <li><b>Language in neurodevelopmental disorders.</b> What neurocognitive mechanisms underly learning and memory problems in children with developmental disorders of speech and language.</li>
                      </ol>
-                     We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.<br>
+                     We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.<br><br>
 		     We are part of the <a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Research Centre for Language, Cognition, and Neuroscience (RCLCN)</a> at the <a href="https://www.polyu.edu.hk/cbs/" target="_blank">Department of Chinese and Bilingual Studies (CBS)</a>, PolyU.
 			<br><br>
                   <h4>JOIN US!</h4>
