--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                </div>
             </div>
          </div>
+         </div>
          <hr>
          <div class="container-fluid">
             <div class="row-fluid marketing">
