--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
 			<br><br>
                   <h4>JOIN US!</h4>
 				        <ol>
-                  <li><b>We are looking for passionate new researchers to join the team. If you are interested, please contact caicai.zhang@polyu.edu.hk.</b></li>
+                  <li><b>We are looking for passionate researchers to join our team. If you are interested, please contact Dr. Zhang at caicai.zhang@polyu.edu.hk.</b></li>
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
 				        </ol>
 
+                  <h4>NEWS</h4>
+				        <ol>
+                  <li><b>[Talk] 22 Nov 2023</b> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
+                  <li><b>[Prize] 11 Sep 2023</b> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
+				        </ol>
+		       
       </div>
       </div>	    
       </div>
