--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
 				        </ol>
 
-                  <h4>NEWS</h4>
+                  <br><h4>NEWS</h4>
 				        <ol>
                   <li><b>[Talk] 22 Nov 2023</b> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
                   <li><b>[Prize] 11 Sep 2023</b> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
