--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                      We use a broad range of tools, including behavioral methods, electroencephalograph (EEG), functional MRI (fMRI) and functional Near-Infrared Spectroscopy (fNIRS) to study these questions.<br><br>
 		     We are part of the <a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Research Centre for Language, Cognition, and Neuroscience (RCLCN)</a> at the <a href="https://www.polyu.edu.hk/cbs/" target="_blank">Department of Chinese and Bilingual Studies (CBS)</a>, PolyU.
 			<br><br>
-                  <h4>JOIN US!</h4>
+                  <br><h4>JOIN US!</h4>
 				        <ol>
                   <li><b>We are looking for passionate researchers to join our team. If you are interested, please contact Dr. Zhang at caicai.zhang@polyu.edu.hk.</b></li>
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
 				        </ol>
-
+		  <hr>
                   <br><h4>NEWS</h4>
 				        <ol>
                   <li><b>[Talk] 22 Nov 2023</b> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
