--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="publications.html">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
-                        <li><a href="news.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
@@ -66,8 +65,8 @@
                   <li><b>We are looking for passionate researchers to join our team. If you are interested, please contact Dr. Zhang at caicai.zhang@polyu.edu.hk.</b></li>
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact caicai.zhang@polyu.edu.hk for any questions.</b></li>
 				        </ol>
-		  <hr>
-                  <br><h4>NEWS</h4>
+		  <br><hr>
+                  <h4>NEWS</h4>
 				        <ol>
                   <li><b>[Talk] 22 Nov 2023</b> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
                   <li><b>[Prize] 11 Sep 2023</b> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
