--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 		  <br><hr>
                   <h4>NEWS</h4>
 				        <ol>
-                  <li><b>[Talk] 22 Nov 2023</b> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
-                  <li><b>[Prize] 11 Sep 2023</b> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
+                  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Prof. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. Abstract & Link </li>
+                  <li><span style="font-weight:bold; color:#ff9900;">[Prize] 11 Sep 2023.</span> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
 				        </ol>
 		       
       </div>
