--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				        <ol>
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 31 Jan 2023.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". Abstract</li>			
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 24 Jan 2023.</span> Dr. Jeremy STEFFMAN (University of Edinburgh) on "Processing prosody in segmental speech perception: Tests in the spectral and temporal domain". Abstract</li>				
-                  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Dr. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. <a href="https://compneurolinglab.github.io/Lecture_Slides/LT3233/lecture1.pdf">Abstract</a></li>
+                  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Dr. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. <a href="https://drcczlab.github.io/files/231122_talk_SK.pdf">Abstract</a></li>
                   <li><span style="font-weight:bold; color:#ff9900;">[Prize] 11 Sep 2023.</span> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
 				        </ol>
 		       
