--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 31 Jan 2023.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". <a href="https://drcczlab.github.io/files/240131_talk_AM.pdf">Abstract & Link</a></li>			
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 24 Jan 2023.</span> Dr. Jeremy STEFFMAN (University of Edinburgh) on "Processing prosody in segmental speech perception: Tests in the spectral and temporal domain". <a href="https://drcczlab.github.io/files/240124_talk_JS.pdf">Abstract & Link</a></li>				
                   <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Dr. Saloni KRISHNAN (Royal Holloway, University of London) on motivation, language learning and reading. <a href="https://drcczlab.github.io/files/231122_talk_SK.pdf">Abstract & Link</a></li>
-                  <li><span style="font-weight:bold; color:#ff9900;">[Prize] 11 Sep 2023.</span> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. Congrats!</li>
+                  <li><span style="font-weight:bold; color:#ff9900;">[Prize] 11 Sep 2023.</span> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. <a href="https://drcczlab.github.io/files/231111_prize_CZ.jpg">Congrats!</a></li>
 				        </ol>
 		       
       </div>
