--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		       
                   <br><h4>JOIN US!</h4>
 				        <ol>
-                  <li><b>We are looking for passionate researchers to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk.</a></b></li>
+                  <li><b>We are looking for passionate researchers to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
                   <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
 				        </ol>
 		  <br><hr>
