--- a/people.html
+++ b/people.html
@@ -4,18 +4,31 @@
       <meta charset="utf-8">
       <title>People</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Research Lab, Home, Velit Aliquet Sagittis University">
+      <meta name="description" content="Caicai Zhang Lab">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
+         <style>
+		      ol {
+	      display: block;
+	      list-style-type: disc;
+	      margin-top: 1em;
+	      margin-bottom: 1em;
+	      margin-left: 0;
+	      margin-right: 0;
+	      padding-left: 40px;
+	      background-color: white;
+	      }
+	      body {background-color: white;}
+	      </style>
    </head>
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead"> The Hong Kong Polytechnic University </p>
+            <h1>Caicai Zhang Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
@@ -24,11 +37,8 @@
                      <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="#">People</a></li>
-                        <li><a href="research.html">Research</a></li>
                         <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
+                        <li><a href="grants.html">Grants</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
