--- a/people.html
+++ b/people.html
@@ -49,7 +49,7 @@
          <div class="row-fluid">
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <li><a href="#principalinvestigator"> Principal Investigator </a></li>
+                  <li><a href="#principalinvestigator">Principal Investigator</a></li>
                   <li><a href="#graduate">Graduate Students</a></li>
                   <li><a href="#undergraduate">Undergraduate Students</a></li>
                </ul>
@@ -61,18 +61,15 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                        <img src="thumbs/prof-photo2.jpg" alt="Joe Smith"/>
+                        <img src="thumbs/prof-photo2.jpg" alt="Caicai Zhang"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Joe Smith</h4>
-                        <p>Assistant Professor of Science and Engineering</p>
-                        <p>Ph.D. in Mechanical Engineering, Lorem Ipsum, 2013<br/>M.S. in Mechanical Engineering, HRV, 2011<br/>BASc in Engineering, University of Lorem Ipsum, 2009</p>
-                        <p><b>Phone: </b>(999) 999-9999 </p>
-                        <p><b>Email: </b><a href="mailto:your.email@uni.edu">your.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                        <p><b><a href="https://www.myperfectcv.co.uk/cv-examples/chemistry-lab-technician-cv-sample">CV</a>, <a href="http://scholar.google.com">Google Scholar</a>, <a href="https://www.linkedin.com">Linkedin</a>, <a href="http://www.researchgate.net">ResearchGate</a></b></p>
+                        <h4>Caicai Zhang</h4>
+                        <p>Associate Professor, Department of Chinese and Bilingual Studies, The Hong Kong Polytechnic University<br/>Member, Research Center for Language, Cognition & Neuroscience<br/>Affiliated member, the Speech Therapy Unit</p>
+                        <p>Ph.D. in Linguistics, The Chinese University of Hong Kong<br/>M.Phil. in Humanities, Hong Kong University of Science and Technology<br/>B.A. in Chinese Language, Fudan University</p>
+                        <p><b>Email: </b><a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a></p>
+                        <p><b><a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
                      </div>
                   </div>
                </section>
