--- a/people.html
+++ b/people.html
@@ -61,7 +61,7 @@
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/prof-photo2.jpg" alt="Caicai Zhang"/>
+                        <img src="thumbs/photo_caicaizhang.jpg" alt="Caicai Zhang"/>
                         </a>
                      </div>
                      <div class="span9">
