--- a/people.html
+++ b/people.html
@@ -69,7 +69,7 @@
                         <p>Associate Professor, Department of Chinese and Bilingual Studies, The Hong Kong Polytechnic University<br/>Member, Research Center for Language, Cognition & Neuroscience<br/>Affiliated member, the Speech Therapy Unit</p>
                         <p>Ph.D. in Linguistics (The Chinese University of Hong Kong)<br/>M.Phil. in Humanities (Hong Kong University of Science and Technology)<br/>B.A. in Chinese Language (Fudan University)</p>
                         <p><b>Email: </b><a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a></p>
-                        <p><b><a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Research Explorer</a>,<a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
+                        <p><b><a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Research Explorer</a>, <a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
                      </div>
                   </div>
                </section>
@@ -86,7 +86,7 @@
                      </div>
                      <div class="span9">
                         <h4>Jiaqiang ZHU</h4>
-			<p>Postdoc</p>
+			<p><i>Postdoc</i></p>
                         <p>Jiaqiang does research in cognitive psychology. He focuses on language and music cognition in different populations, such as individuals with amusia and senior citizens. A variety of techniques are exploited, including psychophysics and electroencephalography. Recently, Jiaqiang explores statistical learning and publishes related scientific papers in JSLHR and JASA.</p>
                         <p><b>Email: </b><a href="mailto:jiaqiang.zhu@polyu.edu.hk">jiaqiang.zhu@polyu.edu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Jiaqiang-Zhu-4">ResearchGate</a></b></p>
@@ -100,7 +100,7 @@
                      </div>
                      <div class="span9">
                         <h4>Xiaocong CHEN</h4>
-			<p>Postdoc</p>
+			<p><i>Postdoc</i></p>
                         <p>Xiaocong received his MA (specializing in phonetics and phonology) and PhD (specializing in psycholinguistics) at Guangdong University of Foreign Studies. His research interest includes phonetics, phonology, psycholinguistics, neurolinguistics and bilingualism. He currently investigates the neural bases of the planning of lexical tones in Chinese word production using different neurobiological techniques such as EEG and fNIRS, and the perceptual-production link underlying speech learning. </p>
                         <p><b>Email: </b><a href="mailto:xiaocong.chen@polyu.edu.hk">xiaocong.chen@polyu.edu.hk</a></p>
 			<p><b><a href="https://scholar.google.com/citations?user=gHlLwKoAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Xiaocong-Chen-2">ResearchGate</a></b></p>
@@ -114,7 +114,7 @@
                      </div>
                      <div class="span9">
                         <h4>Jiwei MA</h4>
-			<p>Research Assistant</p>
+			<p><i>Research Assistant</i></p>
                         <p>Jiwei graduated from The Hong Kong Polytechnic University with an MA degree in Chinese Language and Literature. With a strong passion for psycholinguistics, lexical tone, and music, Jiwei has engaged in related research projects. One project examined the influence of self-voice pitch on the perception of Cantonese lexical tones. Another project investigates the possibility of remedying congenital amusia through behavioral intervention.</p>
                         <p><b>Email: </b><a href="mailto:jiwei.ma@polyu.edu.hk">jiwei.ma@polyu.edu.hk</a></p>
                      </div>
@@ -127,7 +127,7 @@
                      </div>
                      <div class="span9">
                         <h4>Muhammad Adeel KHAN</h4>
-			<p>Research Assistant</p>
+			<p><i>Research Assistant</i></p>
                         <p>Adeel is a recent graduate of HKU, with a degree in "Learning Sciences and Applied Neuroscience." His research focus centers on EEG, HRV, stress, and reinforcement learning.</p>
                         <p><b>Email: </b><a href="mailto:adeel.khan@polyu.edu.hk">adeel.khan@polyu.edu.hk</a></p>
 			<p><b><a href="https://scholar.google.com/citations?user=grvmXXYAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Muhammad-Khan-665">ResearchGate</a></b></p>
@@ -141,7 +141,7 @@
                      </div>
                      <div class="span9">
                         <h4>Tai YUAN</h4>
-			<p>Research Assistant</p>
+			<p><i>Research Assistant</i></p>
                         <p>Tai holds a BSc in Biological Science from Nankai University. He is interested in neurobiology, neurochemistry, neural plasticity, neuronal dynamics, computational neurobiology, neural circuits, networks and higher cognitive functions, biomedical imaging.</p>
                         <p><b>Email: </b><a href="mailto:taiyuan.yuan@polyu.edu.hk">taiyuan.yuan@polyu.edu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Tai-Yuan">ResearchGate</a></b></p>
@@ -155,7 +155,7 @@
                      </div>
                      <div class="span9">
                         <h4>Winsy Pui Ching WONG</h4>
-			<p>Research Assistant</p>
+			<p><i>Research Assistant</i></p>
                         <p>Winsy graduated from the University of Sydney with a bachelor's in speech pathology. She is a registered speech therapist in both Hong Kong and Australia. She enjoys working with SEN children and supporting their learning. She has a strong interest in psycholinguistics, specifically understanding how children with learning difficulties learn and process language in their brains.</p>
                         <p><b>Email: </b><a href="mailto:winsy-pc.wong@polyu.edu.hk">winsy-pc.wong@polyu.edu.hk</a></p>
                      </div>
