--- a/publications.html
+++ b/publications.html
@@ -49,11 +49,12 @@
                
                <section id="articles">
                   <div class="page-header">
-                     <h3>Peer-reviewed journal articles (^ = student trainees, * = co-first author; # = corresponding author)</h3>
+                     <h3>Peer-reviewed journal articles</h3>
+		     <p>(^ = student trainees, * = co-first author; # = corresponding author)</p>
                   </div>
                     <ol>
 <li class="publication">Zhu, J., Shao, J., Zhang, C.<sup>#</sup>, Chen, F.<sup>#</sup>, and Wiener, S. (2023). Statistical information affects how stutterers perceive syllable-tone words in tone languages: Evidence from an auditory-perceptual gating study. <i>Journal of Speech, Language, and Hearing Research, 66</i>(9), 3382-3398. <a href="https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00123">Link</a></li>
-<li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., and Wiener, S. (2023). Lifelong tone deafness does not preclude distributional learning of non-native tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66<i>(7), 2461-2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
+<li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., and Wiener, S. (2023). Lifelong tone deafness does not preclude distributional learning of non-native tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66</i>i>(7), 2461-2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
 
                     </ol>
                     <hr>
