--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> he Hong Kong Polytechnic University </p>
+            <p class="lead"> The Hong Kong Polytechnic University </p>
             <h1>Caicai Zhang Lab</h1>
          </header>
          <div class="masthead">
