--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
                   </div>
                     <ol>
 <li class="publication">Zhu, J., Shao, J., Zhang, C.<sup>#</sup>, Chen, F.<sup>#</sup>, and Wiener, S. (2023). Statistical information affects how stutterers perceive syllable-tone words in tone languages: Evidence from an auditory-perceptual gating study. <i>Journal of Speech, Language, and Hearing Research, 66</i>(9), 3382-3398. <a href="https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00123">Link</a></li>
-<li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., and Wiener, S. (2023). Lifelong tone deafness does not preclude distributional learning of non-native tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66</i>i>(7), 2461-2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
+<li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., and Wiener, S. (2023). Tone deafness in music does not preclude distributional learning of nonnative tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66</i>(7), 2461-2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
 
                     </ol>
                     <hr>
@@ -66,7 +66,7 @@
                     <ol>
 <li class="publication">Chen, X., and Zhang, C. (2023). Encoding of contextual sandhi tonal variants in speech production in Chaoshan Min: An implicit priming study. <i>Festschrift in Honor of Prof. William S-Y. Wang on his 90th Birthday</i>.</li>
                     </ol>
-				        <hr>
+		    <hr>
               </section>
             </div>
          </div>
