--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
                <section id="articles">
                   <div class="page-header">
                      <h3>Peer-reviewed journal articles</h3>
-		     <p>(^ = student trainees, * = co-first author; # = corresponding author)</p>
+		     <p>(# = corresponding author, * = co-first author, ^ = student trainees)</p>
                   </div>
                     <ol>
 <li class="publication">Zhu, J., Shao, J., Zhang, C.<sup>#</sup>, Chen, F.<sup>#</sup>, and Wiener, S. (2023). Statistical information affects how stutterers perceive syllable-tone words in tone languages: Evidence from an auditory-perceptual gating study. <i>Journal of Speech, Language, and Hearing Research, 66</i>(9), 3382-3398. <a href="https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00123">Link</a></li>
