--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,12 @@
                   </div>
                     <ol>
 <li class="publication">Chen, X., and Zhang, C. (2023). Encoding of contextual sandhi tonal variants in speech production in Chaoshan Min: An implicit priming study. <i>Festschrift in Honor of Prof. William S-Y. Wang on his 90th Birthday</i>.</li>
+<li class="publication">Zhang, C., and Wang, W. S-Y. (2022). Perceptual normalization of lexical tones: Behavioral and neural evidence. In Huang, C.-R., Lin, Y.-H., and Chen, I.-H. (Eds.) <i>Cambridge Handbook of Chinese Linguistics</i> (Chapter 18, pp. 383-404). Cambridge University Press.</li>
+<li class="publication">Zhang, C. (2019). Tone and music processing in Chinese. In Huang, C.-R., Jing-Schmidt, Z., and Meisterernst, B. (Eds.) <i>The Routledge Handbook of Applied Chinese Linguistics</i> (pp. 673-688). London and New York: Routledge Taylor & Francis Group.</li>	
+<li class="publication">Zhang, C. (2018). Wang men qiuxue shouji [Studying with Prof. William S-Y. Wang]. In Shen, Z., Kong, J., and Wang, F. (Eds.) <i>Wang Men Qiuxue Ji: Festschrift in Honor of Prof. William S-Y. Wang on his 85th Birthday</i>. Yunnan University Press. [in Chinese]</li>
+<li class="publication">Peng G., and Zhang, C. (2015). Tone perception. In Wang, W. S-Y., and Sun, C. (Eds.), <i>Oxford Handbook of Chinese Linguistics</i> (pp. 516-530). Oxford University Press. [in Chinese]</li>
+<li class="publication">Zhang, C., and Peng, G. (2013). Productivity of Mandarin Third Tone sandhi: A wug test. In Peng G. and Shi F. (Eds.) <i>Eastward Flows the Great River: Festschrift in Honor of Prof. William S-Y. Wang on his 80th Birthday)</i> (pp. 256-282). Hong Kong: City University of Hong Kong Press.</li>			    
+<li class="publication">Zhu X., Jiao L., and Zhang C. (2010). Shengdiao si weidu [Four dimensions in tonal description]. In Pan W. Y. and Shen Z. W. (Eds.), <i>The Joy of Research II: A Festschrift in Honor of Professor William S-Y. Wang on His Seventy-Fifth Birthday</i> (pp. 401-419). Shanghai: Shanghai Education Press. [In Chinese]</li>		    
                     </ol>
 		    <hr>
               </section>
