--- a/people.html
+++ b/people.html
@@ -161,6 +161,19 @@
                      </div>
                   </div>
 		  <hr>
+
+		  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/photo_tonyfong.jpg" alt="Tony Fong"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Tony Chi Ho FONG</h4>
+			<p><i>Project Assistant</i></p>
+                        <p>Tony has backgrounds in Language and Speech Sciences and Japanese Studies. He is interested in several neurological conditions e.g., Tourette Syndrome and Obsessive-Compulsive Disorder.</p>
+                        <p><b>Email: </b><a href="mailto:tonyy.fong@polyu.edu.hk">tonyy.fong@polyu.edu.hk</a></p>
+                     </div>
+                  </div>
+		  <hr>
 		       
 	       </section>
 
