--- a/grants.html
+++ b/grants.html
@@ -35,7 +35,7 @@
                      <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="people.html">People</a></li>
-                        <li><a href="#">Publications</a></li>
+                        <li><a href="publications">Publications</a></li>
                         <li class="active"><a href="grants.html">Grants</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
@@ -63,7 +63,7 @@
 <p>Source: General Research Fund (15605620), Research Grants Council, Hong Kong</p>
 <p>Amount: HK$748,000</p>
 <p>Project duration: Jan 2021 – Dec 2023</p>
-<p>Principle investigator: Caicai Zhang (former PI: Steve Politzer-Ahles)</p>	
+<p>Principle investigator: Caicai Zhang (former PI: Stephen Politzer-Ahles)</p>	
 <hr>
                </section>
                          
