--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                <section id="recruitment">
                   <div class="page-header">
                      <h3>Subject Recruitment</h3>
-		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></p>
+		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
                   </div>
 
 
@@ -59,7 +59,7 @@
                   <div class="page-header">
                      <h3>Prospective researchers</h3>
                   </div>
-<p><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></p>
+		     <p>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
         
 		    <hr>
               </section>
