--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="publications.html">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Join Us</a></li>
                      </ul>
                   </div>
                </div>
@@ -64,14 +64,15 @@
                   <br><h4>JOIN US!</h4>
 				        <ol>
                   <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
-                  <li><b>We also look for subjects to participate in our experiments. If you are interested, below are some self-explanatory posters; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
+                  <li><b>We also look for subjects to participate in our experiments. If you are interested, above are some self-explanatory posters; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
 				        </ol>
 		  <br><hr>
 		       
                   <h4>NEWS</h4>
 				        <ol>
 		  <li><span style="font-weight:bold; color:#ff0000;">[Upcoming Talk] 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
-		  <li><span style="font-weight:bold; color:#ff0000;">[Upcoming Talk] 31 Jan 2024.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". <a href="https://drcczlab.github.io/files/240131_talk_AM.pdf">Abstract & Zoom Link</a></li>			
+		  <br>
+		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 31 Jan 2024.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". <a href="https://drcczlab.github.io/files/240131_talk_AM.pdf">Abstract & Zoom Link</a></li>			
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 24 Jan 2023.</span> Dr. Jeremy STEFFMAN (University of Edinburgh) on "Processing prosody in segmental speech perception: Tests in the spectral and temporal domain". <a href="https://drcczlab.github.io/files/240124_talk_JS.pdf">Abstract & Zoom Link</a></li>				
                   <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Dr. Saloni KRISHNAN (Royal Holloway, University of London) on "Investigating motivation for language and reading". <a href="https://drcczlab.github.io/files/231122_talk_SK.pdf">Abstract & Zoom Link</a></li>
                   <li><span style="font-weight:bold; color:#ff9900;">[Prize] 11 Sep 2023.</span> Dr. Zhang was awarded the Outstanding Young Researcher (Individual) award in the Faculty Awards for Outstanding Performance Achievement 2023. <a href="https://drcczlab.github.io/files/231111_prize_CZ.jpg">Congrats!</a></li>
