--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 		       
                   <h4>NEWS</h4>
 				        <ol>
-		  <li><span style="font-weight:bold; color:#ff0000;">[Upcoming Talk] 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
-		  <br>
+		  <li><span style="font-weight:bold; color:#ff0000;">[***Upcoming Talk***] 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
+		  <br><br>
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 31 Jan 2024.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". <a href="https://drcczlab.github.io/files/240131_talk_AM.pdf">Abstract & Zoom Link</a></li>			
 		  <li><span style="font-weight:bold; color:#3366ff;">[Talk] 24 Jan 2023.</span> Dr. Jeremy STEFFMAN (University of Edinburgh) on "Processing prosody in segmental speech perception: Tests in the spectral and temporal domain". <a href="https://drcczlab.github.io/files/240124_talk_JS.pdf">Abstract & Zoom Link</a></li>				
                   <li><span style="font-weight:bold; color:#3366ff;">[Talk] 22 Nov 2023.</span> Dr. Saloni KRISHNAN (Royal Holloway, University of London) on "Investigating motivation for language and reading". <a href="https://drcczlab.github.io/files/231122_talk_SK.pdf">Abstract & Zoom Link</a></li>
