--- a/grants.html
+++ b/grants.html
@@ -37,7 +37,7 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="publications">Publications</a></li>
                         <li class="active"><a href="grants.html">Grants</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Join Us</a></li>
                      </ul>
                   </div>
                </div>
