--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,16 @@
                <section id="recruitment">
                   <div class="page-header">
                      <h3>Subject Recruitment</h3>
-		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
                   </div>
-
+		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
+			<img src="240112_HMRF.jpg" alt="HMRF">
 
                   
                <section id="prospective">
                   <div class="page-header">
                      <h3>Prospective researchers</h3>
                   </div>
-		     <p>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
+		     <p>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
         
 		    <hr>
               </section>
