--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                      <h3>Subject Recruitment</h3>
                   </div>
 		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
-			<img src="240112_HMRF.jpg" alt="HMRF">
+			<img src="files/240112_HMRF.jpg" alt="HMRF">
 
                   
                <section id="prospective">
