--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,9 @@
                   <div class="page-header">
                      <h3>Subject Recruitment</h3>
                   </div>
-		     <p>Below are some self-explanatory posters. For questions, please contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
+		     <p>Join our ongoing experiments and learn more about your children's language!<br>Below are some self-explanatory posters with ways to join.<br> For questions related to a specific experiment, please contact the person in charge (specificed on the poster). For general questions, feel free to email Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
 			<img src="files/240112_HMRF.jpg" alt="HMRF">
 
-                  
-               <section id="prospective">
-                  <div class="page-header">
-                     <h3>Prospective researchers</h3>
-                  </div>
-		     <p>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
         
 		    <hr>
               </section>
