--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,16 @@
                
                <section id="recruitment">
                   <div class="page-header">
-                     <h3>Subject Recruitment</h3>
+                     <h3>Subject Recruitment 參加研究！（招募中！）</h3>
                   </div>
-		     <p>Join our ongoing experiments and learn more about your children's language!<br>Below are some self-explanatory posters with ways to join.<br> For questions related to a specific experiment, please contact the person in charge (specificed on the poster). For general questions, feel free to email Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
+		     <p>Join our ongoing experiments and learn more about your children's language!
+			     <br>Below are some self-explanatory posters with ways to join.
+			     <br> For questions related to a specific experiment, please contact the person in charge (specificed on the poster). 
+			     <br>For general questions, feel free to email Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p>
+		     <p>現時我們正在招募母語為廣東話的兒童參加研究。通過參與，你可對兒童的語言發展有更深入理解。
+			     <br>下方是一些招募海報，附有報名方法和聯繫方式。
+			     <br>如對某實驗有疑問，請通過海報上的聯繫方式聯絡指定研究人員。
+			     <br>如有任何其他問題，請聯繫張博士 （郵件：<a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>）
 			<img src="files/240112_HMRF.jpg" alt="HMRF">
 
         
