--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
 		     <p>現時我們正在招募母語為廣東話的兒童參加研究。通過參與，你可對兒童的語言發展有更深入理解。
 			     <br>下方是一些招募海報，附有報名方法和聯繫方式。
 			     <br>如對特定實驗有疑問，請通過海報上的聯繫方式聯絡指定研究人員。
-			     <br>如有任何其他問題，請聯繫張博士 （郵件：<a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>）
-			<img src="files/240112_HMRF.jpg" alt="HMRF" width="248" height="350">
+			     <br>如有任何其他問題，請聯繫張博士 （郵件：<a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>）<br>
+			<img src="files/240112_HMRF.jpg" alt="HMRF" width="500" height="707">
 
         
 		    <hr>
