--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 		     <p>現時我們正在招募母語為廣東話的兒童參加研究。通過參與，你可對兒童的語言發展有更深入理解。
 			     <br>下方是一些招募海報，附有報名方法和聯繫方式。（所有實驗均已通過香港理工大學機構委員會倫理審查。報名時，所提供的任何個人信息僅會用於研究目的，且嚴格保密）
 			     <br>如對特定實驗有疑問，請通過海報上的聯繫方式聯絡指定研究人員。
-			     <br>如有任何其他問題，請聯繫張博士 （郵件：<a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>
+			     <br>如有任何其他問題，請聯繫張博士 （郵件：<a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>）。<br>
 		     <p>We are recruiting Cantonese-speaking children to join our ongoing experiments. Come and learn more about your children's language!
 			     <br>Below are some self-explanatory posters with ways to join. (All experiments have been approved by the Institutional Review Board of PolyU. Any personal information provided during sign-up will be kept strictly confidential and used for research purposes only)
 			     <br>For questions related to any specific experiment, please contact the person in charge (specified on the poster). 
