--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		       
                   <br><h4>JOIN US!</h4>
 				        <ol>
-                  <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please contact Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
-                  <li><b>We also look for subjects to participate in our experiments. If you are interested, above are some self-explanatory posters; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
+                  <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please email Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
+                  <li><b>We are also looking for subjects (currently we mainly recruit Cantonese-speaking children) to participate in our ongoing experiments. If you are interested, please see <a href="contact.html">here</a>; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
 				        </ol>
 		  <br><hr>
 		       
