--- a/people.html
+++ b/people.html
@@ -212,12 +212,12 @@
 		       
 	          <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/photo_jiayilu.jpg" alt="Jiayi Lu"/>
+                        <img src="thumbs/photo_jiayilu.png" alt="Jiayi Lu"/>
                      </div>
                      <div class="span9">
                         <h4>Jiayi LU</h4>
 			<p><i>PhD student</i></p>
-                        <p>Jiayi...</p>
+                        <p>Jiayi graduated from Lancaster University with a BA Hons Degree in Linguistics and a minor in English Language. She received her MSc degree in Phonetics from the University of Edinburgh. Her research interests include experimental phonetics, psycholinguistics, and neurolinguistics. Currently, Jiayi is exploring the relationship between language, memory and brain development of Cantonese-speaking children. Additionally, she is actively involved in an ongoing project that focuses on sleep-mediated memory consolidation in the process of second language tone learning.</p>
                         <p><b>Email: </b><a href="mailto:rachel-jiayi.lu@connect.polyu.hk">rachel-jiayi.lu@connect.polyu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Jiayi-Lu-17">ResearchGate</a></b></p>
                      </div>
