--- a/grants.html
+++ b/grants.html
@@ -52,18 +52,22 @@
                      <h3>External grants</h3>
                   </div>
 
-<h5>The efficacy of explicit vs. implicit intervention procedures for Cantonese children with Developmental Language Disorder: A randomized controlled trial. </h5>
-<p>Source: Health and Medical Research Fund, Seed Grant (No. 20211061), Food and Health Bureau, Hong Kong</p>
-<p>Amount: HK$499,960</p>
-<p>Project duration: Jun 2023 – May 2025</p>
-<p>Principle investigator: Caicai Zhang</p>	
+<h5>The efficacy of explicit vs. implicit intervention procedures for Cantonese children with Developmental Language Disorder: A randomized controlled trial.</h5>
+	<ol>
+<li>Source: Health and Medical Research Fund, Seed Grant (No. 20211061), Food and Health Bureau, Hong Kong</li>
+<li>Amount: HK$499,960</li>
+<li>Duration: Jun 2023 – May 2025</li>
+<li>PA: Caicai Zhang</li>
+	<ol>
 <br>
 
 <h5>Is the mismatch negativity really sensitive to abstract linguistic representations? </h5>
-<p>Source: General Research Fund (15605620), Research Grants Council, Hong Kong</p>
-<p>Amount: HK$748,000</p>
-<p>Project duration: Jan 2021 – Dec 2023</p>
-<p>Principle investigator: Caicai Zhang (former PI: Stephen Politzer-Ahles)</p>	
+	<ol>
+<li>Source: General Research Fund (15605620), Research Grants Council, Hong Kong</li>
+<li>Amount: HK$748,000</li>
+<li>Duration: Jan 2021 – Dec 2023</li>
+<li>PI: Caicai Zhang (former PI: Stephen Politzer-Ahles)</li>	
+	<ol>
 <hr>
                </section>
                          
@@ -73,17 +77,21 @@
                   </div>
                      
 <h5>An investigation of the functional neuroanatomy of lexical tone encoding in overt Mandarin word production with functional near-infrared spectroscopy (fNIRS).</h5>
-<p>Source: Departmental General Research Fund (P0046373), The Hong Kong Polytechnic University</p>
-<p>Funding amount: HK$250,000</p>
-<p>Project duration: Sep 2023 – Aug 2025</p>
-<p>Principle investigator: Caicai Zhang</p>	
+	<ol>	       
+<li>Source: Departmental General Research Fund (P0046373), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$250,000</li>
+<li>Duration: Sep 2023 – Aug 2025</li>
+<li>PI: Caicai Zhang</li>
+	<ol>
 <br>
 
 <h5>Emotion Recognition Training based on an integration of Robot and AR technology in Children with Autism Spectrum Disorder.</h5>
-<p>Funding source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (P0043034), The Hong Kong Polytechnic University</p>
-<p>Funding amount: HK$500,000</p>
-<p>Project duration: Jan 2023 – Dec 2024</p>
-<p>Principle investigator: ? (Co-I: Caicai Zhang)</p>	
+	<ol>
+<li>Source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (P0043034), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$500,000</li>
+<li>Duration: Jan 2023 – Dec 2024</li>
+<li>PI: Si Chen (Co-I: Caicai Zhang)</li>
+	<ol>
 <hr>
 
               </section>
