--- a/grants.html
+++ b/grants.html
@@ -149,7 +149,7 @@
 <li>Duration: 2014 – 2018</li>
 <li>PI: Gang Peng (Co-I: Caicai Zhang)</li>	
 	</ol>
-<br>
+
 		       
 <hr>
                </section>
@@ -173,8 +173,126 @@
 <li>Source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (P0043034), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$500,000</li>
 <li>Duration: Jan 2023 – Dec 2024</li>
-<li>PI: Si Chen (Co-I: Caicai Zhang)</li>
+<li>PI: [] (Co-I: Caicai Zhang)</li>
 	</ol>
+<br>
+
+<h5>The Statistical Learning Mechanism across Music and Speech in Congenital Amusics</h5>
+	<ol>
+<li>Source: Postdoc Fellowship (P0040849), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$730,800</li>
+<li>Duration: 2022 – 2024</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>		       
+
+<h5>The Mismatch Negativity for abstract linguistic contrasts</h5>
+	<ol>
+<li>Source: Undergraduate Research and Innovation Scheme (URIS), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$30,000</li>
+<li>Duration: 2021 – 2023</li>
+<li>PI: Caicai Zhang (former PI: Stephen Politzer-Ahles)</li>
+	</ol>
+<br>
+
+<h5>The effect of auditory cuing during sleep on Cantonese tone-word learning in ethnic minority children: A pilot study</h5>
+	<ol>
+<li>Source: Faculty Reserve, Pilot study for GRF (No. P0038894), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$100,000</li>
+<li>Duration: Jan 2022 – Dec 2022</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>The neurocognition of typical and atypical language development: Towards developing early biomarkers</h5>
+	<ol>
+<li>Source: Project of Strategic Importance (P0032004), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$2,000,000</li>
+<li>Duration: Sep 2020 – Aug 2023</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Online Processing of Contextual Tonal Variants during Speech Production in Teochew (Chaozhou Min)</h5>
+	<ol>
+<li>Source: Postdoc Fellowship (P0033654), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$698,040</li>
+<li>Duration: 2020 – 2022</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Categorical perception of the speech sounds in adults who stutter</h5>
+	<ol>
+<li>Source: Departmental General Research Funds (P0014009), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$100,000</li>
+<li>Duration: May 2019 – Apr 2020</li>
+<li>PI: [] (Co-I: Caicai Zhang)</li>
+	</ol>
+<br>
+
+<h5>Impact of acquiring Jyutping on speech processing in Cantonese readers: A combined behavioral and event-related study</h5>
+	<ol>
+<li>Source: Departmental General Research Funds (International Collaboration) (P0008738), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$199,985</li>
+<li>Duration: Sep 2018 – Nov 2020</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>A pilot study on the neural mechanisms of the encoding of tone sandhi with high vs. low productivity in Chinese dialects</h5>
+	<ol>
+<li>Source: Fund for GRF Project Rated 3.5 (CRG) (P0009687), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$105,000</li>
+<li>Duration: Jan 2018 – Apr 2020</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Correlation of congenital amusia and tone merger in Hong Kong Cantonese: An investigation from the individual variation perspective</h5>
+	<ol>
+<li>Source: Departmental General Research Funds (Cross-institutional collaboration) (P0001867), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$122,000</li>
+<li>Duration: 2017 – 2018</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Lexical tone and musical tone: Cross-domain influence of musical disorder on the neural processing of lexical tone</h5>
+	<ol>
+<li>Source: University’s Start-up Fund for New Recruits (P0000424), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$499,995</li>
+<li>Duration: 2016 – 2018</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Statistical modeling of the phonologization of phonetic effects: A cross-linguistic study</h5>
+	<ol>
+<li>Source: Dean’s Reserve fund for International Research Collaboration (P0009715), The Hong Kong Polytechnic University</li>
+<li>Amount: HK$500,000</li>
+<li>Duration: Apr 2016 – Dec 2018</li>
+<li>PI: [] (Co-I: Caicai Zhang)</li>
+	</ol>
+<br>
+
+<h5>Transform the classroom: teaching language sciences and cognitive neuroscience in game-based collaborative learning environment</h5>
+	<ol>
+<li>Source: CBS Learning & Teaching grant, The Hong Kong Polytechnic University</li>
+<li>Amount: HK$99,996</li>
+<li>Duration: 2016 – 2017</li>
+<li>PI: Caicai Zhang</li>
+	</ol>
+<br>
+
+<h5>Teaching the subjects of language and the brain using active learning and blended learning methods</h5>
+	<ol>
+<li>Source: CBS Learning & Teaching grant, The Hong Kong Polytechnic University</li>
+<li>Amount: HK$99,960</li>
+<li>Duration: 2015 – 2016</li>
+<li>PI: Caicai Zhang</li>
+	</ol>	       
+		       
 <hr>
 
               </section>
