--- a/grants.html
+++ b/grants.html
@@ -84,7 +84,7 @@
 <li>Source: Horizon 2020 European Commission (P0032309)</li>
 <li>Amount: HK$509,670</li>
 <li>Duration: 2020 – 2024</li>
-<li>PI: [] (Co-I: Caicai Zhang)</li>	
+<li>PI: Chu-Ren Huang (Co-I: Caicai Zhang)</li>	
 	</ol>
 <br>
 
@@ -102,7 +102,7 @@
 <li>Source: Language Learning Early Career Research Grant (P0014062), University of Utah</li>
 <li>Amount: US$78,441</li>
 <li>Duration: May 2019 – Aug 2020</li>
-<li>PI: [] (Co-I: Caicai Zhang)</li>	
+<li>PI: Zhen Qin (Co-I: Caicai Zhang)</li>	
 	</ol>
 <br>
 
@@ -173,7 +173,7 @@
 <li>Source: Inter-Faculty Collaboration Scheme for FH, FHSS and FENG (P0043034), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$500,000</li>
 <li>Duration: Jan 2023 – Dec 2024</li>
-<li>PI: [] (Co-I: Caicai Zhang)</li>
+<li>PI: Si Chen (Co-I: Caicai Zhang)</li>
 	</ol>
 <br>
 
@@ -227,7 +227,7 @@
 <li>Source: Departmental General Research Funds (P0014009), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$100,000</li>
 <li>Duration: May 2019 – Apr 2020</li>
-<li>PI: [] (Co-I: Caicai Zhang)</li>
+<li>PI: Mehdi Bakhtiar (Co-I: Caicai Zhang)</li>
 	</ol>
 <br>
 
@@ -272,7 +272,7 @@
 <li>Source: Dean’s Reserve fund for International Research Collaboration (P0009715), The Hong Kong Polytechnic University</li>
 <li>Amount: HK$500,000</li>
 <li>Duration: Apr 2016 – Dec 2018</li>
-<li>PI: [] (Co-I: Caicai Zhang)</li>
+<li>PI: Si Chen (Co-I: Caicai Zhang)</li>
 	</ol>
 <br>
 
